--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.8",
-    "@types/react-dom": "^17.0.5"
+    "@types/react-dom": "^17.0.5",
+    "gh-pages": "^3.2.0"
   }
 }
